find 코드를 모두 attrs={~:~}로 통일

--- a/crawling.ipynb
+++ b/crawling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -30,15 +30,15 @@
     "posts = soup.find_all(attrs={\"class\": \"post-item\"})\n",
     "for elem in posts:\n",
     "    post_link = base_url + elem.find('a').get('href')\n",
-    "    title = elem.find('span', class_='title').get_text()\n",
+    "    title = elem.find(\"span\", attrs={\"class\": \"title\"}).get_text()\n",
     "    soup_temp = bs4(requests.get(post_link).text, \"html.parser\")\n",
-    "    date_str = soup_temp.find(\"span\", class_=\"date\").text\n",
+    "    date_str = soup_temp.find(\"span\", attrs={\"class\": \"date\"}).get_text()\n",
     "    print(post_link, title, date_str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,14 +129,14 @@
     "soup = bs4(res, \"html.parser\")\n",
     "\n",
     "# 특정 ID를 가진 요소를 찾습니다.\n",
-    "element_by_name = soup.find_all(attrs={\"name\": \"blogcards\"})\n",
+    "element_by_name = soup.find_all(\"div\", attrs={\"name\": \"blogcards\"})\n",
     "\n",
     "jy_blog_content_lst = []\n",
     "for elem in element_by_name:\n",
     "    link = elem.find('a').get('href')\n",
-    "    title = elem.find('h1', class_='title is-size-4-touch').get_text()\n",
-    "\n",
-    "    date_str = elem.find('span', class_='has-text-weight-semibold').get_text()\n",
+    "    # title = elem.find('h1', class_='title is-size-4-touch').get_text()\n",
+    "    title = elem.find('h1', attrs={\"class\": \"title is-size-4-touch\"}).get_text()\n",
+    "    date_str = elem.find('span', attrs={\"class\": \"has-text-weight-semibold\"}).get_text()\n",
     "    date = datetime.strptime(date_str, \"%B %d, %Y\")\n",
     "    print(title, date, link)"
    ]
