--- a/crawling.ipynb
+++ b/crawling.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup as bs4\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,9 +32,6 @@
     }
    ],
    "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup as bs4\n",
-    "from datetime import datetime\n",
     "base_url = \"https://blog.firstpenguine.school\"\n",
     "res = requests.get(base_url + \"/category\").text\n",
     "soup = bs4(res, \"html.parser\")\n",
@@ -139,6 +147,40 @@
     "    date_str = elem.find('span', attrs={\"class\": \"has-text-weight-semibold\"}).get_text()\n",
     "    date = datetime.strptime(date_str, \"%B %d, %Y\")\n",
     "    print(title, date, link)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://kciter.so//posts/warp-and-weft/ 씨줄과 날줄 2024-05-17 00:00:00\n",
+      "https://kciter.so//posts/the-shortcut/ 기계의 반칙 2024-05-10 00:00:00\n",
+      "https://kciter.so//posts/living-with-ai/ AI와 더불어 살아가기 2024-04-26 00:00:00\n",
+      "https://kciter.so//posts/encrypted-vault-system/ 비밀 관리를 위한 금고 시스템 만들기 2024-04-14 00:00:00\n",
+      "https://kciter.so//posts/principles-of-debugging/ 디버깅 원칙 2024-03-16 00:00:00\n",
+      "https://kciter.so//posts/ascii-3d-renderer/ ASCII 3D 렌더러 만들기 2024-03-03 00:00:00\n",
+      "https://kciter.so//posts/render-delegation-react-component/ Render Delegation하는 React 컴포넌트 만들기 2024-02-18 00:00:00\n",
+      "https://kciter.so//posts/type-driven-development/ Type-Driven Development 2024-01-21 00:00:00\n",
+      "https://kciter.so//posts/developers-learning-and-growth/ 개발자의 학습과 성장 2023-12-24 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_url = \"https://kciter.so/\"\n",
+    "res = requests.get(base_url).text\n",
+    "soup = bs4(res, \"html.parser\")\n",
+    "posts = soup.find_all(attrs={\"class\": \"css-zhckuc e349bdu1\"})\n",
+    "for elem in posts:\n",
+    "    post_link = base_url + elem.get('href')\n",
+    "    title = elem.find(\"div\").get_text()\n",
+    "    date_str = elem.find('small').get_text()\n",
+    "    date = datetime.strptime(date_str, \"%Y-%m-%d\")\n",
+    "    print(post_link, title,  date)"
    ]
   },
   {
