parksb github 블로그 분석

--- a/crawling.ipynb
+++ b/crawling.ipynb
@@ -185,6 +185,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://parksb.github.io/./article/42.html 스마트폰을 PC의 모션 컨트롤러로 만들기: 2024-01-23 00:00:00\n",
+      "https://parksb.github.io/./article/41.html 아치 리눅스로 15년차 넷북 되살리기: 2023-09-12 00:00:00\n",
+      "https://parksb.github.io/./article/40.html 함수형 프로그래밍의 설득력: 2022-11-21 00:00:00\n",
+      "https://parksb.github.io/./article/39.html 철도 시간표가 유닉스 시간이 되기까지: 2022-02-22 00:00:00\n",
+      "https://parksb.github.io/./article/38.html 🧱 Server Driven UI 설계를 통한 UI 유연화: 2021-07-09 00:00:00\n",
+      "https://parksb.github.io/./article/37.html 읽기 쉬운 웹을 위한 타이포그래피: 2021-01-13 00:00:00\n",
+      "https://parksb.github.io/./article/36.html 인터넷이 동작하는 아주 구체적인 원리: 2020-01-27 00:00:00\n",
+      "https://parksb.github.io/./article/35.html 🦀 러스트의 멋짐을 모르는 당신은 불쌍해요: 2019-11-29 00:00:00\n",
+      "https://parksb.github.io/./article/34.html 🗞️ 훈련소에서 매일 뉴스 받아보기: 2019-09-30 00:00:00\n",
+      "https://parksb.github.io/./article/33.html 해피 터미널 라이프: 2019-08-28 00:00:00\n",
+      "https://parksb.github.io/./article/32.html 하지만, 야크 털 깎기는 재미있다: 2019-07-31 00:00:00\n",
+      "https://parksb.github.io/./article/31.html 👻 CPU 보안 취약점을 공격하는 아주 구체적인 원리: 2019-06-02 00:00:00\n",
+      "https://parksb.github.io/./article/30.html 하나의 타입에 강아지와 고양이 담기: 2019-05-12 00:00:00\n",
+      "https://parksb.github.io/./article/29.html 💵 캐시가 동작하는 아주 구체적인 원리: 2019-03-30 00:00:00\n",
+      "https://parksb.github.io/./article/28.html Git 사용 중 자주 만나는 이슈 정리: 2019-02-17 00:00:00\n",
+      "https://parksb.github.io/./article/26.html 🎅 요정을 착취하는 방치형 게임 개발한 이야기: 2018-12-26 00:00:00\n",
+      "https://parksb.github.io/./article/25.html 🤖 컴퓨터가 코드를 읽는 아주 구체적인 원리: 2018-10-16 00:00:00\n",
+      "https://parksb.github.io/./article/24.html 🔐 HTTPS는 어떻게 다를까?: 2018-10-12 00:00:00\n",
+      "https://parksb.github.io/./article/23.html 🌐 Top-Down으로 접근하는 네트워크: 2018-09-28 00:00:00\n",
+      "https://parksb.github.io/./article/21.html 📡 WSL에서 SSH 서버 열기: 2018-09-08 00:00:00\n",
+      "https://parksb.github.io/./article/20.html 윈도우즈에서 React Native 개발 환경 세팅하기: 2018-08-23 00:00:00\n",
+      "https://parksb.github.io/./article/19.html 🐧 윈도우에서 우분투 돌리기: 2018-06-27 00:00:00\n",
+      "https://parksb.github.io/./article/18.html 📊 파이썬으로 정리하는 Quick-Sort 2018-06-22 00:00:00\n",
+      "https://parksb.github.io/./article/17.html Java Design Pattern: Singleton 2018-06-15 00:00:00\n",
+      "https://parksb.github.io/./article/16.html Race condition 발생시키고 Mutex lock으로 해결하기 2018-06-11 00:00:00\n",
+      "https://parksb.github.io/./article/15.html 🌞 개떡같은 코드와 함께한 하루 리뉴얼 이야기: 2018-06-01 00:00:00\n",
+      "https://parksb.github.io/./article/14.html ES6 화살표 함수의 this에 관하여 2018-05-20 00:00:00\n",
+      "https://parksb.github.io/./article/13.html 🏕️ 오픈소스 입문을 위한 아주 구체적인 가이드 2018-05-06 00:00:00\n",
+      "https://parksb.github.io/./article/12.html 🦕 공룡책으로 정리하는 운영체제 Ch.8: 2018-05-04 00:00:00\n",
+      "https://parksb.github.io/./article/11.html 🦕 공룡책으로 정리하는 운영체제 Ch.7: 2018-05-04 00:00:00\n",
+      "https://parksb.github.io/./article/10.html 🦕 공룡책으로 정리하는 운영체제 Ch.6: 2018-05-04 00:00:00\n",
+      "https://parksb.github.io/./article/9.html 🦕 공룡책으로 정리하는 운영체제 Ch.5: 2018-05-03 00:00:00\n",
+      "https://parksb.github.io/./article/8.html 🦕 공룡책으로 정리하는 운영체제 Ch.4: 2018-05-03 00:00:00\n",
+      "https://parksb.github.io/./article/7.html 🦕 공룡책으로 정리하는 운영체제 Ch.3: 2018-05-03 00:00:00\n",
+      "https://parksb.github.io/./article/6.html 🦕 공룡책으로 정리하는 운영체제 Ch.2: 2018-05-03 00:00:00\n",
+      "https://parksb.github.io/./article/5.html 🦕 공룡책으로 정리하는 운영체제 Ch.1: 2018-05-03 00:00:00\n",
+      "https://parksb.github.io/./article/4.html 차이를 중심으로 살펴본 UI디자인과 UX디자인: 2018-05-02 00:00:00\n",
+      "https://parksb.github.io/./article/3.html 프로세스간 통신을 활용해 프로그래밍하기: 2018-05-01 00:00:00\n",
+      "https://parksb.github.io/./article/2.html ♻️ 자바는 어떻게 Garbage Collection을 할까?: 2018-04-23 00:00:00\n",
+      "https://parksb.github.io/./article/1.html ES6와 함께 JavaScript로 OOP하기: 2018-04-15 00:00:00\n",
+      "https://parksb.github.io/./article/0.html 📋 프론트엔드 개발자를 위한 토막상식 2018-02-02 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_url = \"https://parksb.github.io/\"\n",
+    "res = requests.get(base_url + \"articles.html\").text\n",
+    "soup = bs4(res, \"html.parser\")\n",
+    "posts = soup.find_all('li')\n",
+    "for elem in posts:\n",
+    "    try:\n",
+    "        post_link = base_url + elem.find('a').get('href')\n",
+    "        title = elem.find(\"span\", attrs={'class', 'heading'}).get_text()\n",
+    "        date_str = elem.find('time').get_text()\n",
+    "        date = datetime.strptime(date_str, \"%Y.%m.%d\")\n",
+    "        print(post_link, title,  date)\n",
+    "    except Exception as e:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elem.find('a').get('href')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
